hphp/test/slow/async/await_as_an_expr.php.expectf

Fatal error: Await cannot be used as an expression in %s/await_as_an_expr.php on line 5
